html structure and css color

--- a/calculator.html
+++ b/calculator.html
@@ -1,7 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link rel="stylesheet" type= "text/css" href="calculator.css">
+<title>Grade Calculator</title>
 </head>
+
 <body>
+<h1>
+Grade Calculator
+</h1>
+<form>
+<div>
+	
+</div>
+</form>
 </body>
 </html>
