--- a/calculator.html
+++ b/calculator.html
@@ -30,58 +30,56 @@
 				<td>Activity 1</td>
 				<td>A1</td>
 				<td>
-					<input type="text" name="A1_weight">
+					<input type="text" class = "weight" name="A1_weight" >
 				</td>
 				<td>
-					<input type="text" name="A1_grade" onkeyup="calculate_percent()" onkeydown="calculate_percent()">/<br>
-					<input type="text" name="A1_total_grade" onkeyup="calculate_percent()" onkeydown="calculate_percent()">
+					<input type="text" class = "grade" name="A1_grade" >/<br>
+					<input type="text" class = "total_grade" name="A1_total_grade" >
 				</td>
 				<td>
-					<p id = "A1_percent"></p>
+					<p class="percent" ></p>
 				</td>
 			</tr>
 			<tr>
 				<td>Activity 2</td>
 				<td>A2</td>
 				<td>
-					<input type="text" name="A2_weight">
+					<input type="text" class = "weight" name="A2_weight">
 				</td>
 				<td>
-					<input type="text" name="A2_grade">/<br>
-					<input type="text" name="A2_total_grade">
+					<input type="text" class = "grade" name="A2_grade">/<br>
+					<input type="text" class = "total_grade" name="A2_total_grade">
 				</td>
 				<td>
-					<p></p>
+					<p class="percent"></p>
 				</td>
 			</tr>
 			<tr>
 				<td>Activity 3</td>
 				<td>A3</td>
 				<td>
-					<input type="text" name="A3_weight">
+					<input type="text" class = "weight" name="A3_weight">
 				</td>
 				<td>
-					<input type="text" name="A3_grade">/
-					<br>
-					<input type="text" name="A3_total_grade">
+					<input type="text" class = "grade" name="A3_grade">/<br>
+					<input type="text" class = "total_grade" name="A3_total_grade">
 				</td>
 				<td>
-					<p></p>
+					<p class="percent"></p>
 				</td>
 			</tr>
 			<tr>
 				<td>Activity 4</td>
 				<td>A4</td>
 				<td>
-					<input type="text" name="A4_weight">
+					<input type="text" class = "weight" name="A4_weight">
 				</td>
 				<td>
-					<input type="text" name="A4_grade">/
-					<br>
-					<input type="text" name="A4_total_grade">
+					<input type="text" class = "grade" name="A4_grade">/<br>
+					<input type="text" class = "total_grade" name="A4_total_grade">
 				</td>
 				<td>
-					<p></p>
+					<p class="percent"></p>
 				</td>
 			</tr>
 		</table>
@@ -96,7 +94,7 @@
 	</div>
 	<div class="footer"></div>
 </div>
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script type="text/javascript" src="calculator.js"></script>
 </body>
-<script src="jquery-3.1.1.min.js"></script>
-<script src="calculator.js"></script>
 </html>
